# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeCache.txt
cmake/configuration/: root_directory.h
getting-started/: CMakeLists.txt
getting-started/glad/src/: glad.c
getting-started/src/: main.cpp  rectangle.cpp  triangle.cpp
includes/glad/: glad.h
includes/learnopengl/: camera.h  shader_s.h
src/1.getting_started/2.2.hello_triangle_indexed/: rectangle.cpp
src/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
src/1.getting_started/4.1.textures/: textures.cpp
src/1.getting_started/4.2.textures_combined/: textures_combined.cpp
src/1.getting_started/5.1.transformations/: transformations.cpp
src/1.getting_started/6.1.coordinate_systems/: coordinate_systems.cpp
src/1.getting_started/6.2.coordinate_systems_depth/: coordinate_systems_depth.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: coordinate_systems_multiple.cpp
src/1.getting_started/7.1.camera_circle/: camera_circle.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: camera_keyboard_dt.cpp
src/1.getting_started/7.3.camera_mouse_zoom/: camera_mouse_zoom.cpp
src/2.lighting/1.colors/: colors.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: 2.1.obj.frag  2.1.obj.vert  lighting_diffuse.cpp
src/2.lighting/2.2.basic_lighting_specular/: 2.2.obj.frag  lighting_specular.cpp
src/2.lighting/3.1.materials/: 3.1.obj.frag  materials.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: 4.1.obj.frag  lighting_map_diffuse.cpp
src/2.lighting/4.2.lighting_maps_specular_map/: 4.2.obj.frag  lighting_map_specular.cpp
src/2.lighting/5.1.light_casters_directional/: 5.1.obj.frag  light_casters_directional.cpp
src/2.lighting/5.2.light_casters_point/: 5.2.obj.frag  light_casters_point.cpp
src/2.lighting/5.3.light_casters_spot/: 5.3.obj.frag  5.3.obj.vert  (+1 more)
(+2 files in other folders)
